--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,39 @@
-body {
-color: #F0F8FF; background: #000000; 
+
+
+
+body {color: #F0F8FF; background: #000000; 
 font-family: "monospace","Courier New","Lucida Console"; 
-font-size: 1em; line-height: 1em; font-weight: regular; font-style: normal;}
+font-size: 20px;font-weight: bold; font-style: normal;line-height: 1em; 
+-webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  width: 10px;
+  height: 4px;   
+  border-radius: 5px;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+}
+
+
+.chatdn::-webkit-scrollbar,
+.chatdn::-webkit-scrollbar-thumb,
+.chatname::-webkit-scrollbar,
+.chatname::-webkit-scrollbar-thumb {
+  width: 0px;
+  height: 0px;   
+  border-radius: 5px;
+  background-clip: padding-box;
+  border: 0px solid transparent;
+}
+
+
+*::-webkit-scrollbar-thumb {        
+  box-shadow: inset 0 0 0 10px;
+}
 
 a:link {color: #F0F8FF;}
 /* visited link */
@@ -20,68 +52,133 @@ a:active {color: #66cc66;}
   background-color: rgba(0, 0, 0, .7);
   color: white;
   z-index: 20;
+  font-size: 1em; 
+  line-height: 1em;
     }
+	
 	
 .hl {
   position: fixed;
-  left: 1em;
-  top: 0.25em;
+  left: 20px;
+  width:calc(100% - 6px);
+  top: 5px;
+  line-height: 1em;
   }
   
 .hr {
   position: fixed;
-  right: 1em;
-  top: 0.25em;
+  right: 60px;
+  top: 5px;
+  font-size:  0.8em;
+  
   }  
 
 
 
+.log-wrap {
+	position: 	relative;
+	left: 		0;
+	top: calc(3em + 3px);;
+	width:calc(100% - 6px);
+	overflow:	auto;
+}
+
+
+
 .chatdn {
-background:#cccccc; 
-color:#000000;
-width:calc(400px - 10px);
-height:1em;
+background:#000000; 
+color:#cccccc;
+width:calc(10%);
 float:left;
 overflow:auto;	
 text-overflow: ellipsis;
+font-size: 0.5em;
+line-height: 1em; 
+height:2em;
+display: block; 
+text-align: center;
+vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+margin: auto;
 }
 
-.chatg,.chatt1,.chatt0
+.chatname {
+
+background:#cccccc; 
+color:#000000;
+width:calc(20%);
+height:1em;
+float:left;
+text-overflow: clip;
+	line-height:0.8em; 
+	font-size:  1em;
+display: block; 
+white-space: nowrap;
+overflow:auto;
+
+}
+
+
+.chatg,.chatt1,.chatt0,.chatadmin
 {	color:#000000;
 	height:1em;
-	width:calc(100% - 404px);
+	width:calc(70% - 20px);
 	float:right;
 	overflow:auto;	
 	text-overflow: ellipsis;
+	display: block;  
+	line-height:calc(1em - 2px); 
+	font-size:  1em;
 }
 .chatg_,.chatt1_,.chatt0_
 {	height:1em;
 	color:#000000;
 	margin-right: 8px;
 	float:right;
+	line-height:calc(1em - 2px); 
+	font-size:  1em;
+	display: block;  
+	
 }
 
-.header,.chatdn,.footer,.log-wrap,.chatg_,.chatt1_,.chatt0_,.chatg,.chatt1,.chatt0 { padding: 2px 2px 2px 2px; border: #666 1px solid; border-radius: 4px; }
-.chatg {background:#99cccc;} .chatt0 {background:#cc9966;} .chatt1  {background:#66cc66;}
+.header,.chatdn,.chatname,.footer,.log-wrap,.chatg_,.chatt1_,.chatt0_,.chatg,.chatadmin,.chatt1,.chatt0 { padding: 2px 2px 2px 2px; border: #666 1px solid; border-radius: 4px; }
+.chatg {background:#99cccc;} .chatt0 {background:#cc9966;} .chatt1  {background:#66cc66;} .chatadmin  {background:#fc8800;}
 .chatg_{background:#99cccc;} .chatt0_{background:#cc9966;} .chatt1_ {background:#66cc66;} 
 
-.log-wrap {
-	position: 	relative;
-	left: 		0;
-	top: 		3em;
-	width:calc(100% - 46x);
-	overflow:	auto;
-}
+
 
 .footer {
   position: fixed;
   z-index: 20;
-  left: 0px;
-  bottom: 0;
+  left: 8px;
+  bottom: 1px;
   height:1em;
+	line-height:calc(1em - 2px); 
+	font-size:  1em;
   background-color: black;
   color: white;
   text-align: center;
-  width:calc(100% - 6px);
+  width:calc(100% - 22px);
+    background-color: rgba(0, 0, 0, .7);
 }
+
+.zoom {
+  position: absolute;
+  z-index: 21;
+  right: 4px;
+  top: 0px;
+  font-size: 1em;
+  width:100px;
+  text-align: center;
+  }
+
+
+.increase,.decrease{
+
+	
+	
+}
+
 
